// SPDX-License-Identifier: MIT

syntax = "proto2";

import "fown.proto";

message pidfd_entry {
	required uint32		id		= 1;
	required uint64		pos		= 2;
	required uint32		flags		= 3;
	required uint32         mnt_id          = 4;
	required uint64         inode           = 5;
	required int64          pid             = 6;
	required int64          nspid           = 7;
	required fown_entry	fown		= 8;
}
